dfir_rs/tests/compile-fail-stable/surface_null.stderr
error: Degenerate subgraph detected, is there a disconnected `null()` or other degenerate pipeline somewhere?
 --> tests/compile-fail-stable/surface_null.rs:5:9
  |
5 |         null();
  |         ^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_null.rs:7:8
  |
7 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
